@@ -1,19 +1,20 @@
+from egov.contactdirectory.tests import builders
+from ftw.builder.testing import BUILDER_LAYER
+from ftw.builder.testing import functional_session_factory
+from ftw.builder.testing import set_builder_session_factory
+from plone.app.testing import applyProfile
+from plone.app.testing import FunctionalTesting
 from plone.app.testing import IntegrationTesting
 from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
-from plone.app.testing import applyProfile
 from plone.app.testing import setRoles, TEST_USER_ID, TEST_USER_NAME, login
-from plone.testing import Layer
 from plone.testing import z2
-from plone.testing import zca
 from zope.configuration import xmlconfig
-
-
 
 
 class EgovContactdirectoryLayer(PloneSandboxLayer):
 
-    defaultBases = (PLONE_FIXTURE, )
+    defaultBases = (PLONE_FIXTURE, BUILDER_LAYER)
 
     def setUpZope(self, app, configurationContext):
         # Load ZCML
@@ -23,6 +24,7 @@ class EgovContactdirectoryLayer(PloneSandboxLayer):
                        context=configurationContext)
 
         import ftw.geo
+        import ftw.zipexport
         import collective.geo.settings
         import collective.geo.openlayers
         import collective.geo.geographer
@@ -30,6 +32,8 @@ class EgovContactdirectoryLayer(PloneSandboxLayer):
         import collective.geo.kml
 
         xmlconfig.file('configure.zcml', ftw.geo,
+                       context=configurationContext)
+        xmlconfig.file('configure.zcml', ftw.zipexport,
                        context=configurationContext)
         xmlconfig.file('configure.zcml', collective.geo.settings,
                        context=configurationContext)
@@ -46,10 +50,12 @@ class EgovContactdirectoryLayer(PloneSandboxLayer):
         # the Products.* namespace which are also declared as Zope 2
         # products, using <five:registerPackage /> in ZCML.
         z2.installProduct(app, 'egov.contactdirectory')
+        z2.installProduct(app, 'ftw.zipexport')
 
     def setUpPloneSite(self, portal):
         # Install into Plone site using portal_setup
         applyProfile(portal, 'egov.contactdirectory:default')
+        applyProfile(portal, 'ftw.zipexport:default')
 
         setRoles(portal, TEST_USER_ID, ['Manager'])
         login(portal, TEST_USER_NAME)
@@ -57,4 +63,10 @@ class EgovContactdirectoryLayer(PloneSandboxLayer):
 
 EGOV_CONTACTDIRECTORY_FIXTURE = EgovContactdirectoryLayer()
 EGOV_CONTACTDIRECTORY_INTEGRATION_TESTING = IntegrationTesting(
-    bases=(EGOV_CONTACTDIRECTORY_FIXTURE, ), name="EgovContactdirectory:Integration")
+    bases=(EGOV_CONTACTDIRECTORY_FIXTURE, ),
+    name="EgovContactdirectory:Integration")
+
+EGOV_CONTACTDIRECTORY_FUNCTIONAL_TESTING = FunctionalTesting(
+    bases=(EGOV_CONTACTDIRECTORY_FIXTURE,
+           set_builder_session_factory(functional_session_factory)),
+    name="EgovContactdirectory:Functional")
