@@ -1,0 +1,8 @@
+BEGIN:VCARD
+VERSION:3.0
+N:Blau;Minho;;
+FN:Blau Minho
+GENDER:M
+ADR;TYPE=WORK:;;;;;;Schweiz
+ADR;TYPE=HOME:;;;;;;
+END:VCARD
