@@ -1,0 +1,17 @@
+BEGIN:VCARD
+VERSION:3.0
+N:Méier;Frítz;;Sir
+FN:Méier Frítz
+GENDER:F
+ORG:Fantàstorg
+ADR;TYPE=WORK:;;Chrache zwöi;Gôtham;;1337;Schweiz
+EMAIL:fmeier@stirnimaa.ch
+TEL;TYPE=WORK:+41 33 456 78 01
+TEL;TYPE=WORK;TYPE=CELL:+70 98 765 43 21
+TEL;TYPE=WORK;TYPE=FAX:+41 33 456 78 02
+URL:http://www.cheib.ch
+ROLE:Imkér
+TEL;TYPE=HOME:+41 70 123 32 12
+ADR;TYPE=HOME:;;Chriesleweg 5;Dubai;;9999;
+PHOTO;ENCODING=B:R0lGODlhAQABAIAAAAAAAAAAACH5BAQAAAAALAAAAAABAAEAAAICRAEAOw==
+END:VCARD
