@@ -5,7 +5,8 @@ Changelog
 1.6.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added zip-export integration.
+  [lknoepfel]
 
 
 1.6.3 (2014-12-11)
